--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Diaspora Hub" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/apple-icon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/favicons/manifest.json" />
+    <meta name="theme-color" content="#36b6ff" />
+    <meta name="description" content="" />
 
+    <meta property="og:title" content="Diaspora Hub" />
+    <meta
+      property="og:image"
+      content="https://diasporahub.ro/images/og_image.png"
+    />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="https://diasporahub.ro" />
+    <meta property="og:type" content="website" />
+
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/favicons/android-icon-192x192.png"
+    />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
     <title>Diaspora Hub</title>
   </head>
   <body>
