Add description to index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicons/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#36b6ff" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Platforma Diaspora Hub vine în sprijinul cetățenilor români din afara României și a asociațiilor și grupurilor de sprijin de peste hotare în situații de urgență precum cea cu care ne confruntăm în aceste luni."
+    />
 
     <meta property="og:title" content="Diaspora Hub" />
     <meta
