--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,11 +11,8 @@
     />
 
     <meta property="og:title" content="Diaspora Hub" />
-    <meta
-      property="og:image"
-      content="https://diasporahub.ro/images/og_image.png"
-    />
-    <meta property="og:description" content="" />
+    <meta property="og:image" content="https://diasporahub.ro/og_image.png" />
+    <meta property="og:description" content="Platforma Diaspora Hub vine în sprijinul cetățenilor români din afara României și a asociațiilor și grupurilor de sprijin de peste hotare în situații de urgență precum cea cu care ne confruntăm în aceste luni." />
     <meta property="og:url" content="https://diasporahub.ro" />
     <meta property="og:type" content="website" />
 
